library/gatekeeper-earlywatch/data-key-safety-check/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: EWDataKeySafetyCheck
metadata:
  name: configmap-key-still-referenced
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["ConfigMap"]
  parameters:
    sameNamespace: true
    resources:
      - apiGroup: ""
        version: v1
        kind: Pod
        keyReferenceFields:
          - refPath: spec.containers.env.valueFrom.configMapKeyRef
            nameSubField: name
            keySubField: key
