library/gatekeeper-earlywatch/existing-resources/constraint-static.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: EWExistingResources
metadata:
  name: service-static-selector-in
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
  parameters:
    operations: ["DELETE"]
    existingResources:
      apiGroup: ""
      version: v1
      kind: Pod
      sameNamespace: true
      labelSelector:
        matchExpressions:
          - key: tier
            operator: In
            values: ["production", "staging"]
