library/gatekeeper-earlywatch/existing-resources/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: EWExistingResources
metadata:
  name: service-must-have-no-matching-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
  parameters:
    operations: ["DELETE"]
    existingResources:
      apiGroup: ""
      version: v1
      kind: Pod
      labelSelectorFromField: "spec.selector"
      sameNamespace: true
